--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "sslcommerz-lts": "^1.1.0"
   }
 }
