--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "sharp": "^0.32.5",
     "sslcommerz-lts": "^1.1.0"
   }
 }
