--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -23,5 +23,12 @@
     "nodemon": "^2.0.22",
     "sharp": "^0.32.5",
     "sslcommerz-lts": "^1.1.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.4",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.6.4",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   }
 }
